introduce operate function and lay down basic html flex structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Online Calculator</h1>
+    <div class="container">
+        <div id="display"></div>
+        <div id="reset panel"></div>
+        <div id="numbers and symbols"></div>
+    </div>
     
 </body>
 </html>
