add reset panel buttons and some buttons of number and symbols panel

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Online Calculator</h1>
     <div class="container">
         <div id="display"></div>
-        <div id="reset panel"></div>
-        <div id="numbers and symbols"></div>
+        <div id="resetPanel"></div>
+        <div id="numbersAndSymbols"></div>
     </div>
     
 </body>
