complete all visual layout of calculator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <div class="container">
         <div id="display"></div>
         <div id="resetPanel"></div>
-        <div id="numbersAndSymbols"></div>
+        <div id="numbersAndSymbols">
+            <div id="leftSide"></div>
+            <div id="rightSide">
+                <div id="rightUpper"></div>
+                <div id="rightLower"></div>
+            </div>
+        </div>
     </div>
     
 </body>
