--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <div class="container">
         <div id="display"></div>
         <div id="resetPanel"></div>
-        <div id="numbersAndSymbols">
-            <div id="leftSide"></div>
-            <div id="rightSide">
-                <div id="rightUpper"></div>
-                <div id="rightLower"></div>
-            </div>
-        </div>
+        <div id="numbersAndSymbols"></div>
     </div>
     
 </body>
