make changes to fix the display overflow issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Online Calculator</h1>
     <div class="container">
-        <div id="display"></div>
+        <div id="display"><span id="displayText"></span></div>
         <div id="resetPanel"></div>
         <div id="numbersAndSymbols"></div>
     </div>
